# onegov2_uvateam

./: .gitignore  DOCUMENTATION.md  EXECUTION_PHASE2.md  LOG.md  PIPELINE_THEORY.md  README.md  SBM.md  execution.md  log.md  main.py  pipeline.md  pipeline2.md  pyproject.toml
SickSim/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
SickSim/src/: App.tsx  main.tsx  styles.css  types.ts
SickSim/src/components/: BackgroundVideo.tsx  DataFactorRow.tsx  FormControls.tsx  Navbar.tsx  NetworkCanvas.tsx  SeirChart.tsx
SickSim/src/constants/: appConstants.ts
SickSim/src/data/: buurt_BU03940348_network.graphml  utrechtData.ts
SickSim/src/pages/: NetworkGeneration.tsx  PipelineOverview.tsx  SimulationConfiguration.tsx  SimulationRun.tsx
SickSim/src/utils/: generateNetwork.ts  networkParser.ts  networkStats.ts
data/: 37620.parquet  temp.txt
src/: IPF.py  analyze_ipf_fit.py  analyze_preprocessed.py  analyze_references.py  generate_network.py  generate_seed.py  instantiate_microdata.py  main_pipeline.py  utils.py
src/networking/: _household.py  _neighborhood.py  networking.py
tests/: test_neighborhood_generator.py
