[project]
name = "onegov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbsodata>=1.3.5",
    "ipfn>=1.4.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
]
